Hoseinpy.simple_chat_application.e0ace0643fa8e510084c9969f16c78098082cdbc
    Updating `tuna` index
 Downloading crates ...
  Downloaded axum-helmet v0.2.0 (registry `tuna`)
  Downloaded helmet-core v0.2.0 (registry `tuna`)
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling libc v0.2.177
   Compiling serde v1.0.228
    Checking cfg-if v1.0.4
   Compiling typenum v1.19.0
   Compiling version_check v0.9.5
   Compiling serde_core v1.0.228
   Compiling parking_lot_core v0.9.12
   Compiling zerocopy v0.8.27
    Checking bytes v1.11.0
    Checking pin-project-lite v0.2.16
   Compiling autocfg v1.5.0
   Compiling icu_properties_data v2.1.1
   Compiling generic-array v0.14.7
   Compiling icu_normalizer_data v2.1.1
   Compiling find-msvc-tools v0.1.5
    Checking itoa v1.0.15
   Compiling shlex v1.3.0
   Compiling stable_deref_trait v1.2.1
    Checking futures-core v0.3.31
   Compiling cc v1.2.46
    Checking scopeguard v1.2.0
   Compiling pkg-config v0.3.32
   Compiling vcpkg v0.2.15
   Compiling syn v2.0.110
    Checking lock_api v0.4.14
    Checking memchr v2.7.6
   Compiling crossbeam-utils v0.8.21
    Checking signal-hook-registry v1.4.6
    Checking mio v1.1.0
    Checking socket2 v0.6.1
   Compiling thiserror v2.0.17
    Checking futures-sink v0.3.31
    Checking subtle v2.6.1
   Compiling openssl-sys v0.9.111
   Compiling getrandom v0.3.4
    Checking log v0.4.28
   Compiling openssl v0.10.75
   Compiling litemap v0.8.1
   Compiling writeable v0.6.2
    Checking fnv v1.0.7
    Checking once_cell v1.21.3
    Checking pin-utils v0.1.0
    Checking http v1.3.1
   Compiling num-traits v0.2.19
   Compiling native-tls v0.2.14
    Checking futures-io v0.3.31
    Checking percent-encoding v2.3.2
    Checking equivalent v1.0.2
    Checking futures-task v0.3.31
    Checking cpufeatures v0.2.17
    Checking slab v0.4.11
    Checking form_urlencoded v1.2.2
    Checking tracing-core v0.1.35
   Compiling foreign-types-shared v0.1.1
    Checking ryu v1.0.20
   Compiling httparse v1.10.1
   Compiling foreign-types v0.3.2
    Checking ppv-lite86 v0.2.21
   Compiling getrandom v0.2.16
   Compiling tinyvec_macros v0.1.1
   Compiling serde_json v1.0.145
   Compiling utf8_iter v1.0.4
   Compiling foldhash v0.1.5
   Compiling allocator-api2 v0.2.21
    Checking hashbrown v0.16.1
   Compiling bitflags v2.10.0
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.7
    Checking digest v0.10.7
   Compiling tokio v1.48.0
   Compiling hashbrown v0.15.5
   Compiling tinyvec v1.10.0
    Checking indexmap v2.12.1
   Compiling rand_core v0.6.4
   Compiling concurrent-queue v2.5.0
    Checking http-body v1.0.1
    Checking rand_core v0.9.3
    Checking futures-channel v0.3.31
    Checking tower-service v0.3.3
   Compiling parking v2.2.1
   Compiling iana-time-zone v0.1.64
   Compiling crc-catalog v2.4.0
   Compiling openssl-probe v0.1.6
   Compiling sha2 v0.10.9
   Compiling crc v3.3.0
   Compiling futures-util v0.3.31
   Compiling chrono v0.4.42
   Compiling synstructure v0.13.2
   Compiling rand_chacha v0.3.1
   Compiling event-listener v5.4.1
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling tokio-macros v2.6.0
   Compiling tracing-attributes v0.1.31
   Compiling thiserror-impl v2.0.17
   Compiling zerofrom v0.1.6
   Compiling yoke v0.8.1
   Compiling openssl-macros v0.1.1
   Compiling futures-macro v0.3.31
    Checking zerovec v0.11.5
   Compiling zerotrie v0.2.3
    Checking tinystr v0.8.2
    Checking potential_utf v0.1.4
    Checking icu_locale_core v2.1.1
    Checking icu_collections v2.1.1
    Checking tracing v0.1.43
    Checking rand_chacha v0.9.0
   Compiling hashlink v0.10.0
   Compiling hmac v0.12.1
    Checking icu_provider v2.1.1
   Compiling tokio-stream v0.1.17
    Checking icu_properties v2.1.1
   Compiling unicode-normalization v0.1.25
   Compiling crossbeam-queue v0.3.12
    Checking smallvec v1.15.1
    Checking icu_normalizer v2.1.1
    Checking parking_lot v0.12.5
   Compiling either v1.15.0
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
   Compiling futures-intrusive v0.5.0
    Checking tower-layer v0.3.3
   Compiling unicode-bidi v0.3.18
    Checking base64 v0.22.1
   Compiling unicode-properties v0.1.4
   Compiling uuid v1.18.1
   Compiling url v2.5.7
   Compiling stringprep v0.1.5
   Compiling hkdf v0.12.4
    Checking rand v0.9.2
   Compiling rand v0.8.5
   Compiling md-5 v0.10.6
    Checking sha1 v0.10.6
   Compiling sqlx-core v0.8.6
   Compiling atoi v2.0.0
   Compiling hex v0.4.3
    Checking httpdate v1.0.3
   Compiling byteorder v1.5.0
    Checking atomic-waker v1.1.2
   Compiling dotenvy v0.15.7
   Compiling whoami v1.6.1
    Checking utf-8 v0.7.6
   Compiling home v0.5.12
    Checking sync_wrapper v1.0.2
    Checking data-encoding v2.9.0
    Checking tungstenite v0.28.0
    Checking http-body-util v0.1.3
    Checking aho-corasick v1.1.4
   Compiling heck v0.5.0
    Checking regex-syntax v0.8.8
    Checking mime v0.3.17
    Checking axum-core v0.5.5
    Checking serde_urlencoded v0.7.1
    Checking num-integer v0.1.46
    Checking serde_path_to_error v0.1.20
    Checking matchit v0.8.4
    Checking regex-automata v0.4.13
    Checking utf8parse v0.2.2
    Checking anstyle-parse v0.2.7
    Checking num-bigint v0.4.6
    Checking anstyle v1.0.13
    Checking anstyle-query v1.1.5
    Checking colorchoice v1.0.4
    Checking sha1_smol v1.0.1
    Checking is_terminal_polyfill v1.70.2
    Checking jiff v0.2.16
    Checking anstream v0.6.21
    Checking helmet-core v0.2.0
    Checking tower-http v0.6.7
    Checking hyper v1.8.1
    Checking tower v0.5.2
    Checking tokio-tungstenite v0.28.0
    Checking tokio-util v0.7.17
    Checking hyper-util v0.1.18
   Compiling sqlx-postgres v0.8.6
    Checking combine v4.6.7
    Checking regex v1.12.2
    Checking env_filter v0.1.4
    Checking env_logger v0.11.8
    Checking axum v0.8.7
   Compiling sqlx-macros-core v0.8.6
   Compiling sqlx-macros v0.8.6
    Checking sqlx v0.8.6
error: /tmp/Hoseinpy_simple_chat_application_jljn9ic6/target/debug/deps/libsqlx_macros-6c7588d67255c9b7.so: libssl.so.3: cannot open shared object file: No such file or directory
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/sqlx-0.8.6/src/lib.rs:72:1
   |
72 | pub extern crate sqlx_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved imports `self::encode::Encode`, `self::decode::Decode`, `super::Decode`, `super::Encode`, `super::FromRow`, `super::Type`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/sqlx-0.8.6/src/lib.rs:141:9
    |
141 | pub use self::encode::Encode;
    |         ^^^^^^^^^^^^^^^^^^^^
...
152 | pub use self::decode::Decode;
    |         ^^^^^^^^^^^^^^^^^^^^
...
166 |     pub use super::Decode;
    |             ^^^^^^^^^^^^^
167 |     pub use super::Encode;
    |             ^^^^^^^^^^^^^
168 |     pub use super::Executor;
169 |     pub use super::FromRow;
    |             ^^^^^^^^^^^^^^
...
173 |     pub use super::Type;
    |             ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0432`.
error: could not compile `sqlx` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
